# tarmac

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md
.blueprint/specs/: 2606.0001_terminal_card_exit_lifecycle.md  2606.0002_bundled_daemon_path_and_pty_path_injection.md  2606.0003_per_channel_daemon_socket_and_state_namespacing.md  2606.0004_board_cmdw_close_and_esc_defocus.md  2606.0005_unified_active_card_chrome.md  2606.0006_fresh_card_non_border_signal.md  2606.0007_ghostty_macos_key_editing_terminal_cards.md  2606.0008_full_edge_and_corner_card_resize.md  2606.0009_doc_card_transform_scale_zoom.md  2606.0010_doc_card_self_scale_crispness.md  2606.0011_doc_card_screen_space_sizing.md  2606.0012_unified_card_layer.md  2606.0013_dock_stacking_context_over_cards.md  2606.0014_doc_card_close_teardown.md  2606.0014_doc_card_provenance_survives_move.md  2606.0015_dev_runtime_dir_and_socket_path_guard.md  2606.0015_terminal_card_bottom_padding.md  2606.0015_terminal_card_webgl_renderer.md  2606.0016_daemon_restart_on_brew_upgrade.md  2607.0001_tarmac_ui_kit_design_sync_export.md
.claude/: settings.json
.design-sync/: NOTES.md  config.json  conventions.md
.design-sync/previews/: BoardSwitcher.tsx  CardShell.tsx  CycleHud.tsx  DocCard.tsx  DockPane.tsx  MinimapOverlay.tsx  OffscreenHints.tsx  StatusBar.tsx  ToastOverlay.tsx  ZoomControl.tsx
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feature.md
app/: Package.resolved  Package.swift
core/: Cargo.toml
core/crates/tarmac-cli/: Cargo.toml
core/crates/tarmac-cli/src/: main.rs
core/crates/tarmac-cli/tests/: cli.rs
core/crates/tarmac-protocol/: Cargo.toml
core/crates/tarmac-protocol/src/: lib.rs
core/crates/tarmacd/: Cargo.toml
core/crates/tarmacd/examples/: pty_smoke.rs
core/crates/tarmacd/src/: conn.rs  docs.rs  main.rs  persist.rs  state.rs  term.rs
core/crates/tarmacd/tests/: cjk_locale_integration.rs  doc_close_integration.rs  m0_integration.rs  m1_integration.rs  m2_integration.rs  m3_integration.rs  term_close_integration.rs
core/crates/tarmacd/tests/common/: mod.rs
design_handoff_tarmac/: README.md  Tarmac - Cold Start Flow.html  Tarmac - Interactive Prototype.html  Tarmac Cockpit - Explorations.html  Tarmac Cockpit - v2 Terminal-first.html  Tarmac Cockpit - v3 No-harness.html  Tarmac Cockpit - v4 Whiteboard.html
design_handoff_tarmac/chats/: chat1.md  chat2.md
design_handoff_tarmac/tarmac/: board-v4.jsx  board-v4b.jsx  board-v4c.jsx  board.css  breeze.css  canvas-coldstart.jsx  canvas-v2.jsx  canvas-v3.jsx  canvas-v4.jsx  canvas.jsx  coldstart.jsx  converged.css  converged.jsx  directions.jsx  honest.jsx  moments.jsx  parts.jsx  theme.css  tiles-v3.jsx
design_handoff_tarmac/tarmac-proto/: app.jsx  data.jsx  desk.jsx  panels.jsx  proto.css  term.jsx
desktop/: .gitignore  package-lock.json  package.json  vitest.config.ts
desktop/scripts/: build-kit.mjs  kit-fixtures.mjs
desktop/src/: App.tsx  kit-build.test.ts  kit-entry.ts  main.tsx  theme.css  theme.ts
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: bridge.rs  commands.rs  lib.rs  main.rs
docs/: architecture.md  backlog.md  perf-whiteboard-zoom.md  protocol.md  tauri-card-crispness-fix.md  workflow.md
docs/designs/: 2606.0002_macos_distribution_homebrew_tap_and_notarized_dmg.md  2606.0003_per_channel_daemon_socket_and_state_namespacing.md  2606.0003_terminal_selection_restack_deferral.md  2606.0004_tauri_macos_distribution_and_release.md  2606.0005_doc_card_close_teardown.md  2607.0001_tarmac_ui_kit_design_sync_export.md  ime-second-keystroke-fix.md  tauri-card-focus-model.md  unified-card-layer.md
docs/m0/: visual-crib.md
docs/m1/: crib-desk-tiles.md  crib-dock-index.md  crib-state.md
docs/m3/: plan.md
docs/v4/: migration-plan.md  visual-crib.md
docs/v4c/: visual-crib.md
packaging/: Info.plist  Tarmac.icns
packaging/Casks/: tarmac.rb
packaging/icon/: build-icns.sh
scripts/: bundle.sh  e2e.sh  release.sh
(+179 files in other folders)
