[workspace]
resolver = "3"
members = [
    "crates/tarmac-protocol",
    "crates/tarmacd",
    "crates/tarmac-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tarmac-protocol = { path = "crates/tarmac-protocol" }
# serde stack pinned: the rmp-serde tagged-enum + serde_bytes interaction is
# verified on exactly these versions (conformance tests are the tripwire).
serde = { version = "=1.0.228", features = ["derive"] }
rmp-serde = "=1.3.1"
serde_bytes = "=0.11.19"
serde_json = "1"
tokio = "1.52"
tokio-util = "0.7"
portable-pty = "0.9"
notify = "8.2"
notify-debouncer-full = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
