[package]
name = "tarmacd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tarmacd"
path = "src/main.rs"

[dependencies]
tarmac-protocol = { workspace = true, features = ["async"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "io-util",
    "time",
    "signal",
] }
tokio-util.workspace = true
portable-pty.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
# M2 honest signals: proc_pidpath (foreground process name on macOS). Already
# present transitively via portable-pty; declared directly for the FFI calls.
libc = "0.2"
